@@ -26,6 +26,7 @@ version 0.8 - xxx
  . Texture2D: new alias/antialias API (issue #226)
  . Texture2D: supports 16-bit textures RGB4 and RGB5A1 (default is RGBA4444) (issue #356)
  . Texture2D: blending mode varies according to texture (issue #125)
+ . Texture2D: Supports images up to 2048x2048. Assert if bigger (issue #396)
  . TextureAtlas: uses interleaved vertex array (issue #359)
  . TextureMgr: added method that removes unused textures (issue #117)
  . Transition: onEnterTransitionDidFinsih added. OnExit and onEnter only once (issue #172)
